<resources>
    <string name="app_name">Mobify</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="payment">Payments</string>
    <string name="history">History</string>
    <string name="share">Share</string>
    <string name="charges">Charges</string>
    <string name="promotions">Promotions</string>
    <string name="notification">Notifications</string>
    <string name="help">Help</string>

    <string name="tool">Tools</string>

    <string name="alert_dialog">Destination Reached!!</string>
    <string name="pay_button">Pay</string>
    <string name="moveon_button">Move on</string>

    <string-array name="spinner_payment_array">
        <item>Select Payment Type</item>
        <item name="account">Account Payment</item>
        <item>Cash Payment</item>
        <item>M-Pesa Payment</item>
    </string-array>

    <string name="cash_text">Amount due to payment: </string>
    <string name="et_cash">Enter Amount</string>
    <string name="bt_cash">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payment_fragment">I am payment fragment</string>
    <string name="title_activity_map">MapActivity</string>
</resources>
