<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:backgroundTint="@android:color/holo_green_light"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        app:backgroundTint="@android:color/transparent">
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_payments"
            android:title="@string/payment" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_charges"
            android:icon="@drawable/ic_charges"
            android:title="@string/charges" />
        <item
            android:id="@+id/nav_promotions"
            android:icon="@drawable/ic_promotions"
            android:title="@string/promotions" />
    </group>

    <item android:title="@string/tool">
        <menu>
            <item
                android:id="@+id/nav_notifications"
                android:icon="@drawable/ic_bell"
                android:title="@string/notification" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/help" />
        </menu>
    </item>

</menu>
