<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CashFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_cash_payment"
            android:text="@string/cash_text"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ListView
            android:id="@+id/listView"
            android:layout_marginTop="-5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_cash"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:hint="@string/et_cash"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:targetApi="o" />

        <Button
            android:id="@+id/bt_cash_payment"
            android:text="@string/bt_cash"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0dp" />
    </LinearLayout>

</FrameLayout>